[package]
name = "painee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
handlebars = "4"
tokio = { version = "1", features = ["fs"] }
walkdir = "2"
html-minifier = "3"
futures = "0.3"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"